--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/jsonwebtoken": "^8.5.8",
     "@types/morgan": "^1.9.3",
     "@types/node": "^18.0.3",
+    "@types/nodemailer": "^6.4.4",
     "dotenv": "^16.0.1",
     "nodemon": "^2.0.19",
     "ts-node": "^10.8.2",
@@ -31,6 +32,7 @@
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.7.7",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.3.7",
