--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "nodemailer": "^6.7.7",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
+    "socket.io": "^4.5.1",
     "typeorm": "^0.3.7",
     "zod": "^3.17.3"
   }
